--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
             <link rel="stylesheet" href="css/styles.css" type="text/css">
+            <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700i" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
             <script src="js/jquery-3.3.1.min.js"></script>
@@ -15,7 +17,7 @@
                 <h1>PIG DICE GAME</h1>
               </div> 
               <div class="well">
-                    <p><strong> LET'S GET STARTED!!</strong></p>
+                    <h2> LET'S GET STARTED!!</h2>
                   
                     <section id="playingForm">
                             <h2 class="newGame">New Game</h2>
